@@ -1,2 +1,4 @@
+       * Remove created ocspackage.pkg file if errors occurs while generating customizations
+       * Fix mistakes in English.lproj/Localizable.strings and French.lproj/Localizable.strings
 0.1
        * Initial release
